--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -32,7 +32,7 @@
                     <%= message %>
                 </p> <span id="close">&times;</span>
             </section>
-        <% } %>
+            <% } %>
 
                 <section id="cadastro">
 
@@ -88,6 +88,11 @@
                             <% } %>
                 </section>
     </main>
+
+    <footer>
+        <p> Pokedex deselvolvida por João Guilherme Braga, <a href="https://www.linkedin.com/in/jo%C3%A3o-guilherme-braga-4977a81b5/">Linkedin</a> <a href="https://github.com/BragaJoao">GitHub</a> </p>
+    </footer>
+    
     <script src="/js/script.js"></script>
 </body>
 
