--- a/views/details.ejs
+++ b/views/details.ejs
@@ -28,9 +28,9 @@
     <main>
 
         <section class="details">
-            
-                <img src="<%=games.imagem %>" alt="img">
-            
+
+            <img src="<%=games.imagem %>" alt="img">
+
 
             <div>
                 <h1>
@@ -45,6 +45,10 @@
         </section>
 
     </main>
+
+    <footer>
+        <p> Pokedex deselvolvida por João Guilherme Braga, <a href="https://www.linkedin.com/in/jo%C3%A3o-guilherme-braga-4977a81b5/">Linkedin</a> <a href="https://github.com/BragaJoao">GitHub</a> </p>
+    </footer>
 
 </body>
 
